k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditflow-service
spec:
  selector:
    app: auditflow-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
